<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvHeaderView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:textSize="16sp"
        android:text="@string/tv_header_text"
        android:textColor="@android:color/white"
        android:textStyle="bold" >
    </TextView>

    <LinearLayout
        android:id="@+id/llTestProduct"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvHeaderView"
        android:layout_margin="10dp"
        android:background="@android:color/holo_blue_dark"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_header_test_product_text"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_consumable_test"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/tv_consumable" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llRealProduct"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llTestProduct"
        android:layout_margin="10dp"
        android:background="@android:color/holo_blue_dark"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_header_real_product_text"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_non_consumable_real"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/tv_non_consumable" />

        <Button
            android:id="@+id/btn_consumable_real"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/tv_consumable" />

        <Button
            android:id="@+id/btn_subscription_real"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/tv_subscription" />

    </LinearLayout>

</RelativeLayout>